version=12.1.24_dev # new feature: isosurface solvent [optionalRadius default:1.2] FULL #    FULL option does full triples-test, about 3 times slower than #    standard Jmol solvent/MOLECULAR surface, which only checks pairs. #    somewhat more realistic.
# bug fix: draw * translucent does nothing
# bug fix: isosurface on frame other than first will be incorrect
# bug fix: draw with multiple models can fail to save state



Former-commit-id: c2687846bd381d8bf3a82ddaba7bfb0c46b578a1